--- a/index.html
+++ b/index.html
@@ -9,13 +9,50 @@
     <title>Pricing Cards</title>
   </head>
   <body class="box-border">
+    <nav
+      class="bg-gray-50 fixed top-0 w-full z-10 bg-gradient-to-r from-lightBlue to-strongCyan"
+    >
+      <div class="section-container px-4">
+        <div class="flex items-center justify-between flex-row">
+          <!--image-->
+          <a href="#"
+            ><img src="images/logo.svg" alt="" class="scale-[50%]"
+          /></a>
+          <!--Login Signin and Features Container-->
+          <div
+            class="flex flex-row items-center justify-center space-x-4 font-bold"
+          >
+            <a
+              href="login.html"
+              class="inline-block hover:font-semibold border-white p-2 outline-none rounded-lg hover:border-b-4 duration-200"
+              ><h6>Login</h6></a
+            >
+            <a
+              href="#features"
+              class="inline-block hover:font-semibold border-white p-2 outline-none rounded-lg hover:border-b-4 duration-200"
+              ><h6>Features</h6></a
+            >
+            <a
+              href="login.html"
+              class="inline-block hover:font-semibold border-white p-2 outline-none rounded-lg hover:border-b-4 duration-200"
+              ><h6>Sign Up</h6></a
+            >
+            <a
+              href="https://pccard.netlify.app"
+              class="inline-block hover:font-semibold border-white p-2 outline-none rounded-lg hover:border-b-4 duration-200"
+              ><h6>Plans</h6></a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
     <!--Global Container-->
     <div
       class="flex flex-row min-h-screen justify-center items-center bg-slate-800"
     >
       <!--sub-Global Container-->
       <div
-        class="flex  flex-col grow-0 shrink-0 text-white bg-slate-800 my-6 space-y-6 md:space-y-0 md:space-x-6 md:flex-row md:my-0"
+        class="flex flex-col grow-0 shrink-0 text-white bg-slate-800 my-6 space-y-6 md:space-y-0 md:space-x-6 md:flex-row md:my-0"
       >
         <!--Item One-->
         <div
@@ -37,7 +74,7 @@
             </div>
             <!--Lower Section-->
             <hr />
-            <div class="pb-28 pt-8 ">
+            <div class="pb-28 pt-8">
               <div>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -106,55 +143,55 @@
             </div>
             <!--Lower Section-->
             <div class="pt">
-            <hr >
-            <div class="pb-28 pt-8">
-              <div>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="w-4 h-4 inline-block"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-                <span>200 GB Storage</span>
-              </div>
-              <div>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="w-4 h-4 inline-block"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-                <span>Option to add members</span>
-              </div>
-              <div>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  class="w-4 h-4 inline-block"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-                <span>Extra Member benefits</span>
+              <hr />
+              <div class="pb-28 pt-8">
+                <div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="w-4 h-4 inline-block"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                  <span>200 GB Storage</span>
+                </div>
+                <div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="w-4 h-4 inline-block"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                  <span>Option to add members</span>
+                </div>
+                <div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="w-4 h-4 inline-block"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                  <span>Extra Member benefits</span>
+                </div>
               </div>
             </div>
-          </div>
           </div>
         </div>
         <!--Item Threee-->
